fix filtersForm.js (left align and tip)

--- a/src/components/App/filtersForm/filters.module.css
+++ b/src/components/App/filtersForm/filters.module.css
@@ -1,5 +1,5 @@
 .reasonsSelectContainer {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    /*align-items: center;*/
 }
